Add ability to send and receive receipts to the server.

--- a/CheckMates/Info.plist
+++ b/CheckMates/Info.plist
@@ -55,8 +55,14 @@
 			<key>CFBundleURLSchemes</key>
 			<array>
 				<string>com.checkMates.checkMates</string>
+				<string></string>
 			</array>
 		</dict>
 	</array>
+	<key>NSAppTransportSecurity</key>
+	<dict>
+		<key>NSAllowsArbitraryLoads</key>
+		<true/>
+	</dict>
 </dict>
 </plist>
